tests/ui/codemap_tests/tab_2.rs
// ignore-tidy-file-tab

fn main() {
				"""; //~ ERROR unterminated double quote
}
